# FFF-Ansys-Mapdl

./: README.md  main.py  mesh.cdb  pyproject.toml
