[project]
name = "fff1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansys-pyensight-core>=0.10.5",
    "ansys-tools-visualization-interface>=0.11.0",
    "imageio>=2.37.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pyvista>=0.45.2",
    "scipy>=1.16.0",
]
